1.增加加载对话框类ProgressDialog 2.查询某段时间内血糖数据方法 3.血压计检测到开机后发送连接命令

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="unit_glucose_mole">mmol/L</string>
     <string name="unit_glucose_mg">mg/dL</string>
     <string name="data_value_error_message">血糖值应该在%1$s到%2$s之间.</string>
+    <string name="loading">加载中</string>
 </resources>
