--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,7 @@
     <string name="unit_glucose_mg">mg/dL</string>
     <string name="data_value_error_message">血糖值应该在%1$s到%2$s之间.</string>
     <string name="loading">加载中</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
